# libpq-cmake

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: ConfigureChecks.cmake  FindPgPortName.cmake  MakeExportsDef.cmake  MakeExportsMap.cmake  PortSources.cmake  libpq-cmake-config.cmake.in  pg_config.h.in  pg_config_ext.h.in  pg_config_paths.h.in  win32_clang_compat.h
src/libpq/: CMakeLists.txt
src/pgcommon/: CMakeLists.txt
src/pgport/: CMakeLists.txt
test/: CMakeLists.txt  connect_test.c
tools/: CMakeLists.txt  gen_errcodes.c  gen_keywordlist.c
